# omglol-ddns

./: .envrc  .gitignore  Cargo.toml  devenv.nix  flake.nix  result  service.nix
.github/workflows/: build_nix.yml
src/: main.rs
